Fix about me section on mobile

--- a/styles.css
+++ b/styles.css
@@ -373,10 +373,12 @@ hr {
 .about-founder {
   margin-top: 2.6rem;
   width: 51%;
+  margin-bottom: 4.7rem;
 }
 
 .about-founder p {
   margin-top: 3%;
+  margin-bottom: 1.5rem;
   font-size: 1.2rem;
 }
 
@@ -645,16 +647,18 @@ footer {
   }
 
   .book-button, .submit-button {
-    padding: 1rem;
+    display: block;
+    padding: 1.5rem;
     height: 3rem;
     width: 9rem;
     font-size: 1.3rem;
     border-radius: 14px;
     text-align: center;
+    margin-left: 5rem;
   }
 
   .call-to-action {
-    padding: 3rem 1rem;
+    padding: 3.5rem 1rem;
     background: #E7F1F2;
     border-top:2px solid #688bc1;
   }
@@ -689,7 +693,7 @@ footer {
   }
   
   .meet-the-founder article img {
-    margin: 0 0 1.2rem 4.8rem;
+    margin: 0 0 1.2rem 4.4rem;
     position: static;
     width: 60%;
     height: 40%;
@@ -699,6 +703,7 @@ footer {
     margin-left: 7rem;
     margin-top: 3rem;
     padding: 1rem;
+    margin-bottom: 1rem;
     font-size: larger;
     position: static;
     border-radius: 7px;
